[package]
name = "robyn"
version = "0.5.3"
authors = ["Sanskar Jethi <sansyrox@gmail.com>"]
edition = "2018"
description = "A web server that is fast!"
license = "MIT"
homepage = "https://github.com/sansyrox/robyn"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "robyn"
crate-type = ["cdylib", "rlib"]

[dependencies.pyo3]
version = "0.14.1"
features = ["extension-module"]

[dependencies.pyo3-asyncio]
git = "https://github.com/awestlake87/pyo3-asyncio"
branch = "dependabot/cargo/pyo3-0.14"
# path = "../pyo3-asyncio"
features = ["tokio-runtime"]

[dependencies]
tokio = { version = "1.7.0", features = ["full"] }
dashmap = {git = "https://github.com/quake/dashmap", branch = "parking_lot", features = ["parking_lot"]}
anyhow = "1.0.38"
actix-web = "4.0.0-beta.8"
futures-util = "0.3.15"
actix-files = "0.6.0-beta.6"
actix-http = "3.0.0-beta.8"
serde = "1.0.126"
serde_json = "1.0.64"
pythonize = "0.14.0"
mimalloc = { version = "*", default-features = false }
socket2 = { version = "0.4.1", features = ["all"] }

[package.metadata.maturin]
name = "robyn"

[profile.release]
panic = "abort"
opt-level = 3
codegen-units = 1
lto = "fat"
